Курс "Анатомия нервной системы": поправлены ошибки

--- a/Анатомия НС от psyandneuro/Анатомия нервной системы.md
+++ b/Анатомия НС от psyandneuro/Анатомия нервной системы.md
@@ -31,19 +31,19 @@
 **[Полный текст](full.md)**
 
 **По главам:**
-* [Развитие нервной системы](./Развитие нервной системы.md)
-* [Общие сведения о нервной системе](./Общие сведения о нервной системе.md)
-* [Спинной мозг](./Спинной мозг.md)
-* [Переферическая нервная система](./Переферическая нервная система.md)
-	* [Черепные нервы](./Черепные нервы.md)
-	* [Нервные сплетения](./Нервные сплетения.md)
-* [Кора головного мозга](./Кора головного мозга.md)
-* [Свол головного мозга](./Ствол головного мозга.md)
-* [Промежуточный мозг](./Промежуточный мозг.md)
-* [Ретикулярная формация](./Ретикулярная формация.md)
-* [Экстрапирамидная система](./Экстрапирамидная система.md)
-* [Лимбическая система](./Лимбическая система.md)
-* [Кровоснабжение головного мозга](./Кровоснабжение головного мозга.md)
-* [Желудочки головного мозга](./Желудочки головного мозга.md)
+* [Развитие нервной системы](Развитие нервной системы.md)
+* [Общие сведения о нервной системе](Общие сведения о нервной системе.md)
+* [Спинной мозг](Спинной мозг.md)
+* [Переферическая нервная система](Переферическая нервная система.md)
+	* [Черепные нервы](Переферическая нервная система.md#Черепные нервы)
+	* [Нервные сплетения](Переферическая нервная система.md#Нервные сплетения)
+* [Кора головного мозга](Кора головного мозга.md)
+* [Свол головного мозга](Ствол головного мозга.md)
+* [Промежуточный мозг](Промежуточный мозг.md)
+* [Ретикулярная формация](Ретикулярная формация.md)
+* [Экстрапирамидная система](Экстрапирамидная система.md)
+* [Лимбическая система](Лимбическая система.md)
+* [Кровоснабжение головного мозга](Кровоснабжение головного мозга.md)
+* [Желудочки головного мозга](Желудочки головного мозга.md)
 
 
