--- a/Анатомия НС от psyandneuro/Кора головного мозга.md
+++ b/Анатомия НС от psyandneuro/Кора головного мозга.md
@@ -1,6 +1,6 @@
 [Вернуться](./Анатомия нервной системы.md)
 
-Кора головного мозга
+# Кора головного мозга
 
 ## Структурная организация коры большого мозга.
 Кора большого мозга представляет собой многослойную нейронную ткань общей площадью примерно 2200 см2. На основании формы и расположения клеток по толщине коры в типичном случае выделяют 6 слоев (с поверхности вглубь): молекулярный, наружный зернистый, наружный пирамидный, внутренний зернистый, внутренний пирамидный, слой веретеновидных клеток; некоторые из них можно разделить на два или более вторичных слоев.
