--- a/Анатомия НС от psyandneuro/Переферическая нервная система.md
+++ b/Анатомия НС от psyandneuro/Переферическая нервная система.md
@@ -42,7 +42,7 @@
 
 ![http://file2.answcdn.com/answ-cld/image/upload/w_760,c_fill,g_faces:center,fl_lossy,q_60/v1401479880/z3hpdwga81v3arvfw2id.jpg](./img/z3hpdwga81v3arvfw2id.jpg)
 
-![](./img/_IREdnVM0RU-boring.jpg)
+![](./img/IREdnVM0RU-boring.jpg)
 
 ![](./img/3E1ZltA_5iI-magic.jpg)
 
