--- a/Анатомия НС от psyandneuro/Ствол головного мозга.md
+++ b/Анатомия НС от psyandneuro/Ствол головного мозга.md
@@ -1,6 +1,6 @@
 [Вернуться](./Анатомия нервной системы.md)
 
-Ствол головного мозга
+# Ствол головного мозга
 
 Ствол мозга включает три отдела головного мозга: продолговатый мозг, мост и средний мозг - это те отделы, в которых находятся ядра и отходящие от них черепные нервы (с III по XII пару), иннервирующих мускулатуру и кожу головы, части мышц шеи, внутренние органы, часть органов чувств. Через ствол мозга осуществляется связь головного мозга со спинным посредством восходящих и нисходящих проводящих путей. По эволюционному развитию это наиболее древняя часть головного мозга, поэтому большинство образований мозгового ствола по взаимному распределению серого и белого вещества сходны со спинным мозгом.
 ## Продолговатый мозг
@@ -60,7 +60,7 @@
 	* Ядро среднемозгового пути тройничного нерва (V пара);
 3. Основание ножек мозга - лишено ядер и образовано нисходящими из коры больших полушарий пирамидными эфферентными проводящими путями.
 
-![https://pp.userapi.com/c639817/v639817098/18934/_n_W06lxLWI.jpg](./img/_n_W06lxLWI.jpg)
+![https://pp.userapi.com/c639817/v639817098/18934/_n_W06lxLWI.jpg](./img/n_W06lxLWI.jpg)
 
 ![https://pp.userapi.com/c639817/v639817098/18921/e-wIZf6ytno.jpg](./img/e-wIZf6ytno.jpg)
 
