--- a/Анатомия НС от psyandneuro/Экстрапирамидная система.md
+++ b/Анатомия НС от psyandneuro/Экстрапирамидная система.md
@@ -32,7 +32,7 @@
 
 Афферентные пути из хвостатого ядра и из скорлупы, составляющие полосатое тело, направляются к латеральному и медиальному сегментам бледного шара, разделенным тонкой медуллярной пластинкой. Кроме того, полосатое тело имеет прямые и обратные связи с черной субстанцией, которая обеспечивается соответственно аксонами стрионигральных и нигростриарных нейронов. Нигростриарные нейроны являются допаминергическими, тормозящими функцию стриарных холинергических нейронов и уменьшающими таким образом их тормозное влияние на структуры паллидума. ГАМКергические стрионигральные нейроны тормозят активность клеток черной субстанции. Они оказывают тормозное действие как на дофаминергические нигростриарные нейроны, так и на нигроспинальные нейроны, аксоны которых направляются к гамма-мотонейронам спинного мозга, регулируя таким образом тонус поперечнополосатых мышц. Часть нервных волокон, идущих от полосатого тела, обеспечивает его влияние на многие ядерные образования, относящиеся к экстрапирамидной и к лимбико-ретикулярной системам.
 
-![img](./img/_tnw1sWtCxY.jpg)
+![img](./img/tnw1sWtCxY.jpg)
 
 От деятельности экстрапирамидных структур зависит способность человека принимать оптимальную для предстоящего действия позу, поддерживать необходимое реципрокное соотношение тонуса мышц-агонистов и антагонистов, двигательную активность, а также плавность и соразмерность двигательных актов во времени и пространстве. Экстрапирамидная система обеспечивает преодоление инерции покоя и инерции движений, координацию произвольных и непроизвольных (автоматизированных) и, в частности, локомоторных движений, спонтанную мимику, влияет на состояние вегетативного баланса.
 
